# evals-workshop

./: .env.example  .gitignore  FACILITATOR.md  README.md  config.py  pyproject.toml  requirements.txt  reset_demo.py
.github/workflows/: evals.yml  online-evals.yml
hr_agent/: __init__.py  agent.py  knowledge.py  tools.py  trajectory.py
module_1_fundamentals/: 01_first_eval.py  README.md
module_2_single_turn/: README.md  datasets.py  deterministic_evals.py  llm_judge_evals.py  run_eval.py  structured_output.py
module_3_agent_evals/: README.md  datasets.py  llm_trajectory_judge.py  run_eval.py  tool_evals.py  trajectory_evals.py
module_4_ci/: README.md  ci_gate.py  conftest.py  test_evals.py
module_5_online_evals/: README.md  production_traffic.py  project.py  reference_free_evals.py  score_traces.py
module_6_improving_evals/: README.md  annotation_queue.py  few_shot_judge.py  judge_alignment.py
module_7_production_ci/: README.md  baseline.json  monitor.py
